backend/src/main/resources/static/css/global.css
:root {
    --background-color: #121212;
    --primary-color: #3f51b5;
}

body {
    font-family: "Inter", sans-serif;
    font-size: 1rem;
    background-color: var(--background-color);
    color: white;
}

h1 {
    font-family: "Roboto", sans-serif;
    font-size: 2.125rem;
    line-height: 1.235;
}

header {
    background-image: linear-gradient(rgba(255, 255, 255, 0.09), rgba(255, 255, 255, 0.09));
    box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
    padding-left: 24px;
    padding-right: 24px;
    margin-bottom: 8px;
    min-height: 64px;

    a {
        color: white;
        text-decoration: underline;
        text-decoration-color: rgba(63, 81, 181, 0.4);
    }

    a:hover {
        text-decoration-color: inherit;
    }

    .index-link {
        text-decoration: none;
    }
}

button {
    font-family: "Roboto", sans-serif;
    font-size: 0.875rem;
    line-height: 1.75;
    letter-spacing: 0.02857em;
    text-transform: uppercase;
    min-width: 64px;
    cursor: pointer;
    user-select: none;
    padding: 5px 15px;
    border-radius: 4px;
}

/*
    classes
*/

.h-stack {
    display: flex;
    flex-direction: row;
    gap: 1rem;
    align-items: center;
}

.v-stack {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.paper {
    background-image: linear-gradient(rgba(255, 255, 255, 0.05), rgba(255, 255, 255, 0.05));
    box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
    border-radius: 4px;
    padding: 16px;
}

.button-outlined {
    color: var(--primary-color);
    background-color: transparent;
    border: 1px solid rgba(63, 81, 181, 0.5);
}

.button-outlined:hover {
    background-color: rgba(63, 81, 181, 0.08);
    border: 1px solid var(--primary-color);
}

